test/testdata/syntax_errors/unterminated_comment.lox
// error: unterminated multi-line comment
/*
 * Unterminated comment
print "this won't be printed";
